MB1905-Fix alignment of header cells in qbGrid

--- a/ui/client-react/src/components/dataTable/qbGrid/qbGrid.scss
+++ b/ui/client-react/src/components/dataTable/qbGrid/qbGrid.scss
@@ -27,6 +27,10 @@ $grid-font-size: $font-size-p;
         text-align: right;
     }
 
+    .gridHeaderCell {
+        display: block;
+    }
+
     .gridHeaderCell.AlignRight, .gridCell.AlignRight {
         text-align: right;
     }
